--- a/docs/gb/gb0223.md
+++ b/docs/gb/gb0223.md
@@ -28,6 +28,19 @@ Attempted to call `torch.compile` with > 1 args. Dynamo does not support this.
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
+Example code that causes the graph break is:
+
+```python
+import torch
+
+def g(x):
+    return x + 1
+
+@torch.compile(backend="eager") 
+def f(x):
+    return torch.compile(g, False)(x)
+
+f(torch.randn(10, 10))
 
 <!-- ADDITIONAL INFORMATION END -->
 
