--- a/docs/gb/gb0223.md
+++ b/docs/gb/gb0223.md
@@ -42,6 +42,21 @@ def f(x):
 
 f(torch.randn(10, 10))
 ```
+
+You can fix by removing the positional arguments:
+```python
+import torch
+
+def g(x):
+    return x + 1
+
+@torch.compile(backend="eager") 
+def f(x):
+    return torch.compile(g)(x)
+    # or possibly, return torch.compile(g, fullgraph=False)(x)
+
+f(torch.randn(10, 10))
+```
 <!-- ADDITIONAL INFORMATION END -->
 
 [Back to Registry](../index.html)
