--- a/docs/gb/gb0037.md
+++ b/docs/gb/gb0037.md
@@ -27,7 +27,11 @@ Operator `{cause.func}` does not have a meta kernel that supports dynamic output
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
-
+Example code that causes the graph break is:
+```python
+def fn():
+    return torch.linalg.lstsq(torch.rand(10, 10), torch.rand(10, 10))
+```
 <!-- ADDITIONAL INFORMATION END -->
 
 
