--- a/docs/gb/gb0036.md
+++ b/docs/gb/gb0036.md
@@ -28,7 +28,22 @@ Operator `{cause.func}`'s output shape depends on input Tensor data.
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
+Example code that causes the graph break is:
 
+```python
+def fn():
+    return torch.nonzero(torch.rand([10, 10]))
+```
+A sample workaround that shows you how you can fix this:
+
+```python
+def fn():
+    return torch.nonzero(torch.rand([10, 10]))
+
+with torch._dynamo.config.patch(capture_dynamic_output_shape_ops=True):
+    compiled_fn = torch.compile(fn, backend="eager", fullgraph=True)
+    result = compiled_fn()
+```
 <!-- ADDITIONAL INFORMATION END -->
 
 
