--- a/docs/gb/gb0124.md
+++ b/docs/gb/gb0124.md
@@ -29,7 +29,25 @@ Dynamo does not support tracing `Tensor.item()` with config.capture_scalar_outpu
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
+Example code that causes the graph break is:
+```python
+def fn(x):
+    return x.item()
+```
 
+A sample workaround around this is:
+```python
+
+def fn(x):
+    return x.item()
+
+input_tensor = torch.tensor([42.0])
+
+# Workaround: Use a config patch to enable the required flag
+with torch._dynamo.config.patch(capture_scalar_outputs=True):
+    compiled_fn = torch.compile(fn, backend="eager", fullgraph=True)
+    result = compiled_fn(input_tensor)
+```
 <!-- ADDITIONAL INFORMATION END -->
 
 
