--- a/docs/gb/gb0033.md
+++ b/docs/gb/gb0033.md
@@ -27,6 +27,23 @@ Operator `{cause.func}` has a non-Tensor output whose value is dependent on the 
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
+Example code that causes the graph break is:
+```python
+def fn(x):
+    return torch.equal(x, x)
+```
+A sample workaround around this is:
+```python
+def fn(x):
+    return torch.equal(x, x)
+
+input_tensor = torch.ones(5)
+
+# Workaround: Allow graph breaks by using the default fullgraph=False.
+# Dynamo will run torch.equal in eager and compile what it can around it.
+compiled_fn = torch.compile(fn, backend="eager")
+result = compiled_fn(input_tensor)
+```
 
 <!-- ADDITIONAL INFORMATION END -->
 
