--- a/docs/gb/gb0156.md
+++ b/docs/gb/gb0156.md
@@ -27,7 +27,37 @@ Dynamo does not know how to trace method `{name}` of class `{self.python_type_na
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
+Example code that causes the graph break is:
+```python
+def fn(it):
+    return [x + 1 for x in it]
+iterator = zip(range(5), range(10))
+compiled_fn = torch.compile(fn, backend="eager", fullgraph=True)
+compiled_fn(iterator)
+```
+A sample workaround around this is:
+By creating the zip iterator inside the function, torch.compile can trace its creation and usage from the start, avoiding the issue of handling an opaque iterator object passed across the compile boundary. This is often the most performant solution if you can refactor the code this way.
 
+```python
+# Move the creation of the iterator INSIDE the function
+def fn_fixed():
+    iterator = zip(range(5), range(10))
+    return [item[0] + item[1] for item in iterator]
+compiled_fn = torch.compile(fn_fixed, backend="eager", fullgraph=True)
+result = compiled_fn()
+```
+Another workaround around this is to convert the Iterator to a List beforehand as such:
+```python
+def fn(it):
+    return [item[0] + item[1] for item in it]
+iterator = zip(range(5), range(10))
+
+# Convert the iterator to a list before passing it to the compiled function
+data_list = list(iterator)
+
+compiled_fn = torch.compile(fn, backend="eager", fullgraph=True)
+result = compiled_fn(data_list)
+```
 <!-- ADDITIONAL INFORMATION END -->
 
 
