--- a/docs/gb/gb0147.md
+++ b/docs/gb/gb0147.md
@@ -28,7 +28,27 @@ Dynamo does not know how to trace the function `{self.debug_repr()}`
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
+Example code that causes the graph break is:
+```python
+def fn(it):
+    return [x + 1 for x in it()]
+unsupported_callable = zip
+compiled_fn = torch.compile(fn, backend="eager", fullgraph=True)
+compiled_fn(lambda: unsupported_callable(range(5), range(10)))
+```
 
+A sample workaround around this is instead of passing the zip type, create the zip iterator instance and iterate over it correctly (without the extra () call). This avoids the unsupported function call entirely:
+```python
+def fn_fixed(iterator):
+    return [item[0] + item[1] for item in iterator]
+
+# An instance of a zip iterator is created and passed as the argument.
+iterator_instance = zip(range(5), range(10))
+
+# This now compiles successfully
+compiled_fn = torch.compile(fn_fixed, backend="eager", fullgraph=True)
+result = compiled_fn(iterator_instance)
+```
 <!-- ADDITIONAL INFORMATION END -->
 
 
