--- a/docs/gb/gb0142.md
+++ b/docs/gb/gb0142.md
@@ -33,6 +33,32 @@ Dynamo does not know how to enter a `{ctx.python_type_name()}` context manager.
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
+Example code that causes the graph break is:
+```python
+def fn(obj):
+    with obj:
+        return 1
+invalid_context_manager = 3
+compiled_fn = torch.compile(fn, backend="eager", fullgraph=True)
+compiled_fn(invalid_context_manager)
+```
+A sample workaround around this is to create a valid context manager. This can be any class that implements __enter__ and __exit__:
+```python
+def fn(obj):
+    with obj:
+        print("Inside the context manager.")
+        return 1
+class MyContextManager:
+    def __enter__(self):
+        print("Entering context.")
+        return self
+
+    def __exit__(self, exc_type, exc_value, traceback):
+        print("Exiting context.")
+valid_context_manager = MyContextManager()
+compiled_fn = torch.compile(fn, backend="eager", fullgraph=True)
+result = compiled_fn(valid_context_manager)
+```
 
 <!-- ADDITIONAL INFORMATION END -->
 
