--- a/docs/gb/gb0059.md
+++ b/docs/gb/gb0059.md
@@ -31,6 +31,23 @@ Dynamo does not know how to trace builtin operator `{fn.__name__}` with argument
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
+Example code that causes the graph break is:
+```python
+def fn():
+    print("This is a debug message inside the compiled function.")
+compiled_fn = torch.compile(fn, backend="eager", fullgraph=True)
+compiled_fn()
+```
+
+A sample workaround around this is:
+```python
+def fn():
+    print("This is a debug message inside the compiled function.")
+
+with torch._dynamo.config.patch(reorderable_logging_functions={print}):
+    compiled_fn = torch.compile(fn, backend="eager", fullgraph=True)
+    result = compiled_fn()
+```
 
 <!-- ADDITIONAL INFORMATION END -->
 
