--- a/docs/gb/gb0007.md
+++ b/docs/gb/gb0007.md
@@ -27,7 +27,38 @@ explanation
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
+Example code that causes the graph break is:
+```python
+def fn():
+    return unittest.skip("test")
+compiled_fn = torch.compile(fn, backend="eager", fullgraph=True)
+compiled_fn()
+```
+The first workaround is to remove the skipped function call since the function unittest.skip is designed for test control flow and should not be part of your model's logic. The correct fix is to remove such calls from any code path that you intend to compile.
+```python
+def fn_fixed():
+    return torch.ones(5) # The actual computation
+compiled_fn = torch.compile(fn_fixed, backend="eager", fullgraph=True)
+result = compiled_fn()
+```
 
+The second workaround is to override Dynamo's default behavior using the @torch._dynamo.dont_skip_tracing decorator. NOTE: This is an advanced feature and may lead to further graph breaks if the function's internals are also untraceable so proceed with caution.
+```python
+def fn():
+    return unittest.skip("This is a test skip reason")
+
+with torch._dynamo.config.patch(
+    skipfile_rules=(
+        (unittest.case, torch._dynamo.trace_rules.DONT_SKIP),
+    )
+):
+    try:
+        # This will now trace INTO unittest.skip, which itself will raise unittest.case.SkipTest. Dynamo will then graph break.
+        compiled_fn = torch.compile(fn, backend="eager")
+        compiled_fn()
+    except unittest.case.SkipTest:
+        print("\nSuccess: Traced into the skipped function and caught the expected SkipTest exception.")
+```
 <!-- ADDITIONAL INFORMATION END -->
 
 
