--- a/docs/gb/gb0264.md
+++ b/docs/gb/gb0264.md
@@ -29,7 +29,7 @@ Dynamo does not support this
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
-
+Try to construct nn.Parameter() outside the compiled region.  If this is not possible, turn `graph_break_on_nn_param_ctor` off
 <!-- ADDITIONAL INFORMATION END -->
 
 
