--- a/docs/gb/gb0264.md
+++ b/docs/gb/gb0264.md
@@ -29,7 +29,38 @@ Dynamo does not support this
 ## Additional Information
 
 <!-- ADDITIONAL INFORMATION START - Add custom information below this line -->
-Try to construct nn.Parameter() outside the compiled region.  If this is not possible, turn `graph_break_on_nn_param_ctor` off
+Example code that causes this graph break:
+```python
+import torch
+
+@torch.compile(fullgraph=True)
+def fn(x):
+    param = torch.nn.Parameter(torch.randn_like(x))
+    return param, param + x
+
+fn(torch.randn(3, 3))
+```
+
+Try to construct `nn.Parameter()` outside the compiled region.
+```python
+@torch.compile(fullgraph=True)
+def fn(x, param):
+    return param + x
+
+fn(torch.randn(3, 3), torch.nn.Parameter(torch.randn(3, 3)))
+```
+
+If this is not possible, turn `torch._dynamo.config.graph_break_on_nn_param_ctor` off (NOT RECOMMENDED):
+```python
+torch._dynamo.config.graph_break_on_nn_param_ctor = False
+
+@torch.compile(fullgraph=True)
+def fn(x):
+    param = torch.nn.Parameter(torch.randn_like(x))
+    return param, param + x
+
+fn(torch.randn(3, 3))
+```
 <!-- ADDITIONAL INFORMATION END -->
 
 
